--- a/force-app/main/default/classes/AddressPractice.cls
+++ b/force-app/main/default/classes/AddressPractice.cls
@@ -1,4 +1,5 @@
 public class AddressPractice {
+    //this is homeAddress method.
     public void homeAddress(){
         string name = 'Vitap';
         system.debug('name = ' + name);
