--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -24,4 +24,31 @@ public class AccountTriggerHandler {
         }
     }
    }
+
+   public static void updateVIPForAllContacts(List<account> accTriggerNew, 
+                                            List<account> accTriggerOld,
+                                            Map<id, account> accTriggerNewMap,
+                                            Map<id, account> accTriggerOldMap) {
+       set<id> setAccIds = new set<id>();
+       for (account eachAcc : accTriggerNew) {
+           account oldAccount = accTriggerOldMap.get(eachacc.Id);
+            if(eachAcc.vip__c != oldAccount.vip__c){
+                setAccIds.add(eachAcc.Id);
+            }
+       }
+       //check if atleast one account's vip is updated.
+       if(!setAccIds.isEmpty()){
+            //fetch all contacts for accounts whose vip field is changed.
+            List<Contact> listContacts = [select id, name, vip__c, accountid from contact where accountid in :setAccIds];
+            //check if atleast one contact is found
+            if(!listContacts.isEmpty()){
+                for (contact eachContact : listContacts) {
+                        account newAccountRecord = accTriggerNewMap.get(eachContact.accountid);
+                        eachContact.VIP__c = newAccountRecord.VIP__c;// GET IT FROM ACCOUNT's VIP FIELD
+                }
+                //update all the contacts
+                update listContacts;
+            }
+       }
+   }
 }
