14 Aug Practice week 6 commit 1

--- a/force-app/main/default/classes/DmlDemo2.cls
+++ b/force-app/main/default/classes/DmlDemo2.cls
@@ -61,7 +61,7 @@ public class DmlDemo2 {
 
        for (Integer i = 0; i < 200; i++) {
            account acc = new account();
-           acc.name = 'SoftInnovas 29July v'+i;
+           acc.name = 'SoftInnovas 15Aug v'+i;
            acc.AccountNumber = 'Accis-'+i;
            acc.Active__c = 'Yes';
            listAccount.add(acc);
