August 14 practiceSession commit 2

--- a/force-app/main/default/classes/AccountTriggerHandlerP.cls
+++ b/force-app/main/default/classes/AccountTriggerHandlerP.cls
@@ -41,4 +41,43 @@ public class AccountTriggerHandlerP {
         }
        
    }
+
+   public static void updateContactsPhones(List<account> accTriggerNew, map<id, account> accTriggerNewMap,
+   List<account> accTriggerOld, Map<id, account> accTriggerOldMap) {
+     //update related contacts OtherPhone and mobilephone   ONLY When ACCOUNT's Phone is changed.
+   
+    //how to get IDs of account where account phone field is changed?
+        //--> OldAccount phone != newAccountPhone
+        set<id> accIds = new set<id>();
+        for (account newAcc : accTriggerNew) {
+            system.debug('newAcc.id => ' + newAcc.Id) ;
+            //we have NEW Account
+            string newAccPhone = newAcc.Phone;
+            //oldAccount and oldAccount's phone
+            //fetching VALUE from KEY for accTriggerOldMap
+            //.get(key)
+            Account oldAccount = accTriggerOldMap.get(newAcc.Id);
+            string oldAccPhone = oldAccount.Phone;
+            if(newAccPhone != oldAccPhone){
+                accIds.add(newAcc.Id);
+            }
+        }
+
+        system.debug('**** accout ids : ' + accIds);
+         //Fetch contacts for all those accounts where account's phone is changed.
+         List<contact> listContacts = [select id, OtherPhone, MobilePhone,AccountId from contact where AccountId in :accIds];
+         system.debug('***** all contacts = ' + listContacts);
+         if(!listContacts.isEmpty()){
+
+            for (contact eachContact : listContacts) {
+                //fetch Old Account
+               Account oldAccount = accTriggerOldMap.get(eachContact.AccountId);
+               eachContact.OtherPhone = oldAccount.Phone;
+               //fetch New Account
+               Account newAccount = accTriggerNewMap.get(eachContact.AccountId);
+               eachContact.MobilePhone = newAccount.Phone;
+            }
+            update listContacts;
+         }
+   }
 }
